<resources>
    <string name="app_name">MyFitnessApp</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="general_connection_error">Connection error. Please try again.</string>

    <string name="preferences_user_data" translatable="false">user_data</string>
    <string name="preferences_user_data_weight" translatable="false">weight</string>
    <string name="preferences_user_data_height">height</string>
    <string name="preferences_user_data_location" translatable="false">location</string>

    <string name="preferences_session" translatable="false">session</string>
    <string name="preferences_session_user" translatable="false">session_user</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Registration</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_register">Create account</string>
    <string name="auth_login">Login</string>
    <string name="auth_no_account">Create new account</string>
    <string name="auth_existing_account">Login to an existing account</string>
    <string name="auth_register_progressdialog">Creating new account…</string>
    <string name="auth_login_progressdialog">Logging in…</string>

    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="create_profile_header">Profile</string>
    <string name="create_profile_weight">Weight</string>
    <string name="create_profile_save_btn">Save</string>

    <string name="main_list_today">Today</string>
    <string name="main_menu_add">Add</string>
    <string name="main_menu_add_food">Add food</string>
    <string name="main_menu_add_activity">Add activity</string>
    <string name="main_energy_gained">gained</string>
    <string name="main_energy_burned">burned</string>

    <string name="detail_size">Quantity</string>
    <string name="detail_energy">Energy</string>
    <string name="detail_btn_delete">DELETE</string>
    <string name="detail_header2">General Information</string>

    <string name="title_activity_add_item">Add</string>
    <string name="add_item_suggestions">Item to add</string>
    <string name="add_entry_type_food">Add food entry</string>
    <string name="add_entry_type_activity">Add exercise activity</string>
    <string name="add_item_speak">Tap to tell what you want to add</string>
    <string name="add_item_menu_confirm">Confirm</string>
    <string name="add_entry_food_not_found">Food not found in database</string>
    <string name="add_entry_progress_dialog">Processing entries…</string>
    <string name="add_entry_list_placeholder">This place will contain entries after all parameters below will be set</string>
    <string name="add_entry_exercise_walking">Walking</string>
    <string name="add_entry_exercise_running">Running</string>
    <string name="add_entry_exercise_cycling">Cycling</string>
    <string name="add_entry_food_header">Food</string>
    <string name="add_entry_exercise_header">Exercise</string>

    <string name="title_activity_plan">Plan</string>
    <string name="plan_activities">Planned activities</string>
    <string name="plan_add">Add</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_example" translatable="false">Example action</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_logout">Logout</string>

    <string name="nav_header_not_logged">Not logged user</string>
    <string name="nav_header_not_logged_email">Unknown Email Address</string>

    <string name="login_email_required">Email required</string>
    <string name="login_email_invalid">Invalid email</string>
    <string name="login_password_required">Password required</string>
    <string name="login_password_short">Password too short</string>
    <string name="login_wrong_data">Wrong Email or Password</string>

    <string name="auth_email">Email</string>
    <string name="auth_free">Use as not logged user</string>

    <string name="register_username_required">Username required</string>
    <string name="register_email_taken">Email already registered</string>
    <string name="login_free">free</string>
    <string name="login_free_access" translatable="false">free_access</string>

    <string name="create_profile_height">Height</string>

    <string name="create_profile_location">Location</string>
    <string name="create_profile_location_hint">City/Code</string>


    <string name="title_activity_profile">Profile</string>
    <string name="profile_picture_description" translatable="false">profile picture</string>
    <string name="profile_unknown">unknown</string>
    <string name="profile_username">Username</string>
    <string name="profile_email">Email</string>
    <string name="profile_bmi" translatable="false">BMI</string>
    <string name="profile_edit_btn">Edit</string>
    <string name="register_username_taken">Username already exists</string>
    <string name="auth_loaddata_progressdialog">Loading data…</string>
    <string name="preferences_user_data_username" translatable="false">username</string>
    <string name="preferences_user_data_email" translatable="false">email</string>
    <string name="login_userdata_null">No user data found.</string>
    <string name="general_database_error">Database error</string>
    <string name="preferences_user_data_height_param" translatable="false">height</string>
    <string name="plan_add_btn">Add</string>
    <string name="add_plan_header">Plan new activity</string>
    <string name="add_plan_save_btn">Plan</string>
    <string name="add_plan_activity_type">Acitivty</string>
    <string name="add_plan_activity_date">Date</string>
    <string name="add_plan_activity_time">Time</string>
    <string name="add_plan_activity_time_default" translatable="false">11:00</string>
    <string name="add_plan_activity_duration">Duration</string>
    <string name="add_plan_activity_duration_default" translatable="false">01:00:00</string>
    <string name="add_plan_activty_default">Walking</string>
    <string name="title_activity_add_plan">Plan new activity</string>
    <string name="title_plan">Activity planner</string>
    <string name="plan_weather_icon_desc" translatable="false">weather icon</string>

    <string name="add_plan_activity_type_placeholder">Choose type of activity</string>
    <string name="date_dialog_title" translatable="false">Pick a date</string>
    <string name="title_stats">Statistics</string>
    <string-array name="add_plan_activity_types">
        <item>@string/add_entry_exercise_walking</item>
        <item>@string/add_entry_exercise_running</item>
        <item>@string/add_entry_exercise_cycling</item>
    </string-array>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="stats_chart1_header" translatable="false">Energy gained overview</string>
    <string name="stats_title_gained">Gained Energy Overview</string>
    <string name="stats_title_burned">Burned Energy Overview</string>
    <string name="stats_chart_y_gained">Energy gained [kcal]</string>
    <string name="stats_chart_x_date">Date</string>
    <string name="sign_in_loading">Loading</string>
    <string name="title_connect_google">Connect with Google</string>
    <string name="preferences_session_google" translatable="false">google_account</string>
    <string name="add_plan_activity_date_placeholder">Click here to set</string>
    <string name="main_list_svalue_unit">CU</string>
    <string name="stats_title_gained_sugar">Gained Carbohydrate Units Overview</string>
    <string name="stats_chart_y_burned">Energy burned [kcal]</string>
    <string name="stats_chart_y_gained_carbs">Carbohydarte units [CU]</string>
    <string name="stats_title_planned">Planned Burned Energy Overview</string>
    <string name="stats_chart_y_planned">Planned energy gain [kcal]</string>
    <string name="preferences_user_data_location_lat" translatable="false">location_lat</string>
    <string name="preferences_user_data_location_lng" translatable="false">user_data_location_lng</string>
    <string name="date_dialog_title_add_plan">Pick a date</string>
    <string name="dialog_number_picker_cancel">Cancel</string>
    <string name="dialog_number_picker_set">Set</string>
    <string name="preferences_user_data_location_lon" translatable="false">location_lon</string>
    <string name="plan_dialog">Loading Weather Data...</string>
    <string name="notification_title">Planned activity just started</string>
    <string name="notification_text">Click to confirm</string>
    <string name="add_entry_manual">text</string>
    <string name="add_entry_voice">voice</string>
    <string name="add_entry_edit_txt_hint">Type food name</string>
    <string name="add_entry_manual_btn">search</string>
    <string name="detail_share">Share</string>

</resources>
